--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NEXT_PUBLIC_USE_MOCK_API=false next dev",
+    "dev": "NEXT_PUBLIC_USE_MOCK_API=false next dev --turbopack",
     "dev:mock": "NEXT_PUBLIC_USE_MOCK_API=true next dev",
     "build": "next build",
     "start": "next start",
