--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NEXT_PUBLIC_USE_MOCK_API=false next dev --turbopack",
-    "dev:mock": "NEXT_PUBLIC_USE_MOCK_API=true next dev",
+    "dev:mock": "NEXT_PUBLIC_USE_MOCK_API=true next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
